building better interface

--- a/index.html
+++ b/index.html
@@ -36,6 +36,7 @@
     <article class="content scrollable header">
         <div id="image-presenter"></div>
         <button class="recommend" id="upload">Pick Image and Upload</button>
+        <div id="result"></div>
 
     </article>
 </section>
