implementing activity handling

--- a/index.html
+++ b/index.html
@@ -18,18 +18,14 @@
     <!-- Transitions -->
     <link rel="stylesheet" href="building_blocks/transitions.css">
 
+    <!-- our customizations css -->
+    <link href="custom.css" rel="stylesheet" type="text/css">
+
     <!--
     Tiny imgur.com wrapper
     -->
     <script src="imgur.js"></script>
 
-
-    <style type="text/css">
-        #image-presenter img {
-            max-width: 80%;
-            height: auto;
-        }
-    </style>
 </head>
 <body>
 <section role="region" id="todo-item-detail" data-position="current">
