--- a/share.html
+++ b/share.html
@@ -15,28 +15,40 @@
     <link href="building_blocks/style/headers.css" rel="stylesheet" type="text/css">
     <link href="building_blocks/style/buttons.css" rel="stylesheet" type="text/css">
 
+    <!-- Transitions -->
+    <link rel="stylesheet" href="building_blocks/transitions.css">
+
+    <!-- our customizations css -->
+    <link href="custom.css" rel="stylesheet" type="text/css">
+
+
     <!--
     Tiny imgur.com wrapper
     -->
     <script src="imgur.js"></script>
 
-
-    <style type="text/css">
-        #image-presenter img {
-            max-width: 80%;
-            height: auto;
-        }
-    </style>
 </head>
 <body>
-<section role="region" id="todo-item-detail" data-position="right">
-    <header>
+<section role="region" id="todo-item-detail" data-position="current">
+    <header class="fixed">
         <h1>Share on imgur.com</h1>
     </header>
     <article class="content scrollable header">
         <div id="image-presenter"></div>
-        <button class="recommend" id="upload">Pick Image and Upload</button>
+        <button class="recommend" id="upload">Upload</button>
+    </article>
+</section>
 
+<section role="region" id="result" data-position="right">
+    <header class="fixed">
+        <button id="back-to-main"><span class="icon icon-back">back</span></button>
+        <h1>Share on imgur.com</h1>
+    </header>
+    <article class="content scrollable header">
+        <h2 id="link"></h2>
+        <button class="recommend" id="open">Open Link</button>
+        <button class="recommend" id="email">Send Link By Emailk</button>
+        <button class="recommend" id="bookmark">Add Link To Bookmarks</button>
     </article>
 </section>
 
