implementing more activities

--- a/index.html
+++ b/index.html
@@ -29,7 +29,7 @@
 </head>
 <body>
 <section role="region" id="todo-item-detail" data-position="current">
-    <header>
+    <header class="fixed">
         <h1>Share on imgur.com</h1>
     </header>
     <article class="content scrollable header">
@@ -39,14 +39,14 @@
 </section>
 
 <section role="region" id="result" data-position="right">
-    <header>
+    <header class="fixed">
         <button id="back-to-main"><span class="icon icon-back">back</span></button>
         <h1>Share on imgur.com</h1>
     </header>
     <article class="content scrollable header">
         <h2 id="link"></h2>
         <button class="recommend" id="open">Open Link</button>
-        <button class="recommend" id="email">Send Link By Emailk</button>
+        <button class="recommend" id="email">Send Link By Email</button>
         <button class="recommend" id="bookmark">Add Link To Bookmarks</button>
     </article>
 </section>
