better workflow for the app, dividing actions into pick and upload.

--- a/index.html
+++ b/index.html
@@ -36,7 +36,8 @@
     </header>
     <article class="content scrollable header">
         <div id="image-presenter"></div>
-        <button class="recommend" id="upload">Pick Image and Upload</button>
+        <button class="recommend" id="pick">Pick Image</button>
+        <button class="recommend hidden" id="upload">Upload to Imgur</button>
         <div id="uploading" class="hidden">
             <progress></progress>
             <span>Uploading...</span>
