removing type="text/css" and "/>" since HTML5 doesn't need this.

--- a/share.html
+++ b/share.html
@@ -2,31 +2,28 @@
 <html>
 <head>
     <title>Imgur Image Uploader</title>
-    <meta charset="utf8"/>
-    <meta name="viewport" content="width=device-width, user-scalable=no" />
+    <meta charset="utf8">
+    <meta name="viewport" content="width=device-width">
     <!--
    Gaia Building Blocks Styles
    learn more about Gaia Building Blocks at:
    http://buildingfirefoxos.com/building-blocks/
    -->
-    <link href="building_blocks/util.css" rel="stylesheet" type="text/css">
-    <link href="building_blocks/fonts.css" rel="stylesheet" type="text/css">
-    <link href="building_blocks/transitions.css" rel="stylesheet" type="text/css">
-    <link href="building_blocks/style/headers.css" rel="stylesheet" type="text/css">
-    <link href="building_blocks/style/buttons.css" rel="stylesheet" type="text/css">
-    <link href="building_blocks/style_unstable/progress_activity.css" rel="stylesheet" type="text/css">
+    <link href="building_blocks/util.css" rel="stylesheet">
+    <link href="building_blocks/fonts.css" rel="stylesheet">
+    <link href="building_blocks/transitions.css" rel="stylesheet">
+    <link href="building_blocks/style/headers.css" rel="stylesheet">
+    <link href="building_blocks/style/buttons.css" rel="stylesheet">
+    <link href="building_blocks/style_unstable/progress_activity.css" rel="stylesheet">
 
 
     <!-- Transitions -->
     <link rel="stylesheet" href="building_blocks/transitions.css">
 
     <!-- our customizations css -->
-    <link href="custom.css" rel="stylesheet" type="text/css">
+    <link href="custom.css" rel="stylesheet">
 
-    <!--
-    Tiny imgur.com wrapper
-    -->
-    <script src="imgur.js"></script>
+
 
 </head>
 <body>
@@ -57,6 +54,10 @@
         <button class="recommend" id="bookmark">Add Link To Bookmarks</button>
     </article>
 </section>
+<!--
+   Tiny imgur.com wrapper
+   -->
+<script src="imgur.js"></script>
 
 <script src="app.js"></script>
 </body>
