posting as logged user works, code needs refactor but it is good to deploy

--- a/index.html
+++ b/index.html
@@ -16,6 +16,7 @@
     <link href="building_blocks/style/buttons.css" rel="stylesheet" type="text/css">
     <link href="building_blocks/style_unstable/progress_activity.css" rel="stylesheet" type="text/css">
     <link href="building_blocks/style/input_areas.css" rel="stylesheet" type="text/css">
+    <link href="building_blocks/icons/styles/action_icons.css" rel="stylesheet" type="text/css">
 
 
     <!-- Transitions -->
@@ -34,7 +35,7 @@
 <section role="region" id="todo-item-detail" data-position="current">
     <header class="fixed">
         <menu type="toolbar">
-            <a id="authorize-button" href="#"><span class="icon icon-share">Log in</span></a>
+            <a id="authorize-button" href="#"><span class="icon icon-user">Log in</span></a>
         </menu>
         <h1>Share on imgur.com</h1>
     </header>
@@ -47,7 +48,7 @@
             <progress></progress>
             <span>Uploading...</span>
         </div>
-        <div id="status" class="hidden">
+        <div id="status">
             <span id="status_msg">Click the button on the top right corner to authorize your user on imgur.com</span>
         </div>
     </article>
