--- a/share.html
+++ b/share.html
@@ -49,7 +49,8 @@
             <span>Uploading...</span>
         </div>
         <div id="status">
-            <span id="status_msg">Click the button on the top right corner to authorize your user on imgur.com</span>
+            <span id="status_msg">Click the button on the top right corner to authorize your user on imgur.com.
+            if you don't authorize your user then you will only be able to upload anonymously.</span>
         </div>
     </article>
 </section>
