--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
     <link href="new_blocks/transitions.css" rel="stylesheet" type="text/css">
     <link href="new_blocks/style/headers.css" rel="stylesheet" type="text/css">
     <link href="new_blocks/style/buttons.css" rel="stylesheet" type="text/css">
-    <link href="new_blocks/style_unstable/progress_activity.css" rel="stylesheet" type="text/css">
+    <link href="new_blocks/style/progress_activity.css" rel="stylesheet" type="text/css">
     <link href="new_blocks/style/input_areas.css" rel="stylesheet" type="text/css">
     <link href="new_blocks/icons/styles/action_icons.css" rel="stylesheet" type="text/css">
 
@@ -44,6 +44,7 @@
         <button class="recommend" id="pick">Pick Image</button>
         <button class="recommend hidden" id="upload">Upload to Imgur Anonymously</button>
         <button class="recommend hidden" id="upload_user">Upload as <span id="username"></span></button>
+        <button class="recommend hidden" id="cancel_web_activity">Cancel</button>
         <div id="uploading" class="hidden">
             <progress></progress>
             <span>Uploading...</span>
@@ -65,6 +66,7 @@
         <button class="recommend" id="open">Open Link</button>
         <button class="recommend" id="email">Send Link By Email</button>
         <button class="recommend" id="bookmark">Add Link To Bookmarks</button>
+        <button class="recommend hidden" id="return_web_activity">Close</button>
     </article>
 </section>
 
