--- a/index.html
+++ b/index.html
@@ -64,7 +64,7 @@
     <article class="content scrollable header">
         <h2 id="link"></h2>
         <button class="recommend" id="open">Open Link</button>
-        <button class="recommend" id="email">Send Link By Email</button>
+        <button class="recommend" id="email">Share Image</button>
         <button class="recommend" id="bookmark">Add Link To Bookmarks</button>
         <button class="recommend hidden" id="return_web_activity">Close</button>
     </article>
