--- a/index.html
+++ b/index.html
@@ -39,7 +39,7 @@
         </menu>
         <h1>Share on imgur.com</h1>
     </header>
-    <article class="content scrollable header">
+    <article id="main-screen" class="content scrollable header">
         <div id="image-presenter"></div>
         <button class="recommend" id="pick">Pick Image</button>
         <button class="recommend hidden" id="upload">Upload to Imgur Anonymously</button>
@@ -61,7 +61,7 @@
         <button id="back-from-result"><span class="icon icon-back">back</span></button>
         <h1>Share on imgur.com</h1>
     </header>
-    <article class="content scrollable header">
+    <article id="link-actions" class="content scrollable header">
         <h2 id="link"></h2>
         <button class="recommend" id="open">Open Link</button>
         <button class="recommend" id="email">Send Link By Email</button>
